Fixed logo size on mobile

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -134,7 +134,8 @@ blockquote .small, blockquote footer, blockquote small {
     text-align: center;
   }
   #top #logo {
-    // width:100%;
+    width:100%;
+    max-width:378px;
   }
 }
 
